--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,16 +4,16 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+EditorStartupMap=/Game/Game/Maps/MultiplayerMainMenu.MultiplayerMainMenu
 LocalMapOptions=
-TransitionMap=
+TransitionMap=/Game/Game/Maps/TransitionMap.TransitionMap
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
+GameInstanceClass=/Game/Game/MultiplayerGameInstance.MultiplayerGameInstance_C
+GameDefaultMap=/Game/Game/Maps/MultiplayerMainMenu.MultiplayerMainMenu
+ServerDefaultMap=/Game/Game/Maps/TransitionMap.TransitionMap
+GlobalDefaultGameMode=/Game/Game/MultiplayerGameMode.MultiplayerGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -51,7 +51,4 @@ NetConnectionClassName="/Script/OnlineSubsystemSteam.SteamNetConnection"
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/MultiplayerTest")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/MultiplayerTest")
-
-
-
 
